Add initial support for draw tools

--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -59,8 +59,8 @@
                     startingFixtures: [
                         'appbar',
                         'basemap',
-                        'crosshairs',
                         'details',
+                        'crosshairs',
                         'geosearch',
                         'grid',
                         'help',
@@ -350,7 +350,8 @@
                                         'home',
                                         'basemap',
                                         'legend',
-                                        'geosearch'
+                                        'geosearch',
+                                        'draw'
                                     ]
                                 },
                                 export: {
@@ -616,7 +617,8 @@
                                         'home',
                                         'basemap',
                                         'legend',
-                                        'geosearch'
+                                        'geosearch',
+                                        'draw'
                                     ]
                                 },
                                 export: {
