prevent empty fixture array from loading default fixtures

--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -56,24 +56,7 @@
                 // generic configuration with no layers. code starts again around line 740
                 const config = {
                     startingFixtures: [
-                        'appbar',
-                        'basemap',
-                        'crosshairs',
-                        'details',
-                        'geosearch',
-                        'grid',
-                        'help',
-                        'hilight',
-                        'layer-reorder',
-                        'legend',
-                        'mapnav',
-                        'northarrow',
-                        'overviewmap',
-                        'scrollguard',
-                        'panguard',
-                        'settings',
-                        'wizard',
-                        'export' // export is not default, but usually want for tests
+                        // export is not default, but usually want for tests
                     ],
                     configs: {
                         en: {
