--- a/demos/enhanced-all.html
+++ b/demos/enhanced-all.html
@@ -63,6 +63,10 @@
                 <a href="enhanced-samples.html?sample=10">Identify Prioritization</a>. Has layers set up to test result
                 prioritization scenarios.
             </li>
+            <li>
+                11.
+                <a href="enhanced-samples.html?sample=11">Point Clusterer</a>. Has layers with point clustering enabled.
+            </li>
         </ul>
 
         <h2>Respect for Apps</h2>
