--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -26,6 +26,7 @@
                 <option value="008-projection-party">08. Layers in Different Projections</option>
                 <option value="009-custom-panels">09. Custom HTML panels</option>
                 <option value="010-identify-priority">10. Identify Prioritization</option>
+                <option value="011-drawing-tools">11. Drawing Tools</option>
             </select>
             <nav class="linky-container">
                 <a class="linky" href="enhanced-all.html">Catalogue</a
@@ -58,8 +59,8 @@
                     startingFixtures: [
                         'appbar',
                         'basemap',
-                        'details',
                         'crosshairs',
+                        'details',
                         'geosearch',
                         'grid',
                         'help',
@@ -349,8 +350,7 @@
                                         'home',
                                         'basemap',
                                         'legend',
-                                        'geosearch',
-                                        'draw'
+                                        'geosearch'
                                     ]
                                 },
                                 export: {
@@ -616,8 +616,7 @@
                                         'home',
                                         'basemap',
                                         'legend',
-                                        'geosearch',
-                                        'draw'
+                                        'geosearch'
                                     ]
                                 },
                                 export: {
