--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -27,6 +27,7 @@
                 <option value="009-custom-panels">09. Custom HTML panels</option>
                 <option value="010-identify-priority">10. Identify Prioritization</option>
                 <option value="011-clusterer">11. Point Clusterer</option>
+                <option value="012-drawing-tools">12. Drawing Tools</option>
             </select>
             <nav class="linky-container">
                 <a class="linky" href="enhanced-all.html">Catalogue</a
@@ -59,8 +60,8 @@
                     startingFixtures: [
                         'appbar',
                         'basemap',
-                        'details',
                         'crosshairs',
+                        'details',
                         'geosearch',
                         'grid',
                         'help',
@@ -350,8 +351,7 @@
                                         'home',
                                         'basemap',
                                         'legend',
-                                        'geosearch',
-                                        'draw'
+                                        'geosearch'
                                     ]
                                 },
                                 export: {
@@ -617,8 +617,7 @@
                                         'home',
                                         'basemap',
                                         'legend',
-                                        'geosearch',
-                                        'draw'
+                                        'geosearch'
                                     ]
                                 },
                                 export: {
