--- a/demos/enhanced-all.html
+++ b/demos/enhanced-all.html
@@ -52,6 +52,10 @@
                 12.
                 <a href="enhanced-samples.html?sample=12">Layer Swipe</a>. Contains demo of layer swipe feature
             </li>
+            <li>
+                13.
+                <a href="enhanced-samples.html?sample=13">Drawing Tools</a>. Contains demo of drawing tools
+            </li>
         </ul>
 
         <h2>Fancy Samples</h2>
