--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -58,8 +58,8 @@
                     startingFixtures: [
                         'appbar',
                         'basemap',
-                        'details',
                         'crosshairs',
+                        'details',
                         'geosearch',
                         'grid',
                         'help',
@@ -349,8 +349,7 @@
                                         'home',
                                         'basemap',
                                         'legend',
-                                        'geosearch',
-                                        'draw'
+                                        'geosearch'
                                     ]
                                 },
                                 export: {
@@ -616,8 +615,7 @@
                                         'home',
                                         'basemap',
                                         'legend',
-                                        'geosearch',
-                                        'draw'
+                                        'geosearch'
                                     ]
                                 },
                                 export: {
