--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -28,6 +28,7 @@
                 <option value="010-identify-priority">10. Identify Prioritization</option>
                 <option value="011-clusterer">11. Point Clusterer</option>
                 <option value="012-layer-swipe">12. Layer Swipe</option>
+                <option value="013-drawing-tools">13. Drawing Tools</option>
             </select>
             <nav class="linky-container">
                 <a class="linky" href="enhanced-all.html">Catalogue</a
@@ -60,8 +61,8 @@
                     startingFixtures: [
                         'appbar',
                         'basemap',
-                        'details',
                         'crosshairs',
+                        'details',
                         'geosearch',
                         'grid',
                         'help',
@@ -352,8 +353,7 @@
                                         'home',
                                         'basemap',
                                         'legend',
-                                        'geosearch',
-                                        'draw'
+                                        'geosearch'
                                     ]
                                 },
                                 export: {
@@ -619,8 +619,7 @@
                                         'home',
                                         'basemap',
                                         'legend',
-                                        'geosearch',
-                                        'draw'
+                                        'geosearch'
                                     ]
                                 },
                                 export: {
