remove highlight from escape key keyboard bug

--- a/demos/enhanced-all.html
+++ b/demos/enhanced-all.html
@@ -67,6 +67,10 @@
                 11.
                 <a href="enhanced-samples.html?sample=11">Point Clusterer</a>. Has layers with point clustering enabled.
             </li>
+            <li>
+                12.
+                <a href="enhanced-samples.html?sample=12">Drawing Tools</a>. Adds draw tools to the map.
+            </li>
         </ul>
 
         <h2>Respect for Apps</h2>
