Add mini-icons to legend items

--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -29,6 +29,7 @@
                 <option value="011-clusterer">11. Point Clusterer</option>
                 <option value="012-layer-swipe">12. Layer Swipe</option>
                 <option value="013-drawing-tools">13. Drawing Tools</option>
+                <option value="014-all-layers">14. All Layer Types</option>
             </select>
             <nav class="linky-container">
                 <a class="linky" href="enhanced-all.html">Catalogue</a
