--- a/demos/enhanced-all.html
+++ b/demos/enhanced-all.html
@@ -75,6 +75,11 @@
                 11.
                 <a href="enhanced-samples.html?sample=11">Point Clusterer</a>. Has layers with point clustering enabled.
             </li>
+            <li>
+              13.
+              <a href="enhanced-samples.html?sample=13">All Layer Types</a>.
+              Many layer types on one page, useful for comparisons.
+            </li>
         </ul>
 
         <h2>Respect for Apps</h2>
