Initial keyboard navigation fixture

--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -67,6 +67,7 @@
                         'grid',
                         'help',
                         'hilight',
+                        'keyboardnav',
                         'layer-reorder',
                         'legend',
                         'mapnav',
