Add dcat xslt for metadata, update hnap

--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -35,7 +35,7 @@
                 <option value="r2-config-upgraded">17. RAMP 2 config upgraded</option>
                 <option value="error-layers">18. Layers in error state</option>
                 <option value="disabled-options">19. Layers with disabled options</option>
-                <option value="layer-metadata">20. Layer with metadata</option>
+                <option value="layer-metadata">20. Layers with metadata</option>
                 <option value="section-item">21. Section Items</option>
                 <option value="info-section">22. Info Sections</option>
                 <option value="legname">23. Legend Name Hunt</option>
