--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -155,7 +155,7 @@
                                         id: 'baseNrCan',
                                         name: 'Transportation (CBMT - Labels)',
                                         description:
-                                            'The Transportation (CBMT - Labels) basemap displays topographical features and political boundaries, while focusing primarily on transportation routes. Has topographic labels.',
+                                            'The basic transport map (CBMT - labels) displays topographical features and political boundaries, while focusing primarily on transport routes. Contains topographical labels.',
                                         altText: 'Transportation (CBMT - Labels)',
                                         layers: [
                                             {
@@ -185,7 +185,7 @@
                                         id: 'baseCBME_CBCE_HS_RO_3978',
                                         name: 'Elevation (CBME)',
                                         description:
-                                            'The Elevation (CBME) basemap illustrates elevation differences, using contour lines and colour gradients.',
+                                            'The basic elevation map (CBME) illustrates differences in elevation using contour lines and colour gradients.',
                                         altText: 'Elevation (CBME)',
                                         layers: [
                                             {
@@ -200,7 +200,7 @@
                                         id: 'baseCBMT_CBCT_GEOM_3978',
                                         name: 'Transportation (CBMT - No Labels)',
                                         description:
-                                            'The Transportation (CBMT - No Labels) basemap displays topographical features and political boundaries, while focusing primarily on transportation routes. Omits topographic labels.',
+                                            'The basic transport map (CBMT - No labels) displays topographical features and political boundaries, while focusing primarily on transport routes. Omits topographical labels.',
                                         altText: 'Transportation (CBMT - No Labels)',
                                         layers: [
                                             {
