--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -254,6 +254,11 @@
                 46.
                 <a href="index-samples.html?sample=46">No Layers</a>. A map with the typical fixins, but no layers.
             </li>
+            <li>
+                47.
+                <a href="index-samples.html?sample=47">WKT Basemap</a>. A map that includes a basemap schema defined by
+                a WKT projection.
+            </li>
         </ul>
 
         <h2>Respect for Apps</h2>
