--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -62,6 +62,7 @@
                 <option value="basemap-fail">44. Failing Basemap</option>
                 <option value="export-custom-renderer">45. Custom Export</option>
                 <option value="no-layers">46. Normal Map with No Layers</option>
+                <option value="wkt-basemap">47. WKT Polar Basemap</option>
             </select>
             <nav class="linky-container">
                 <a class="linky" href="index-all.html">Catalogue</a
