Can now add custom geosearch sources, demo sample made

--- a/demos/enhanced-all.html
+++ b/demos/enhanced-all.html
@@ -56,6 +56,10 @@
                 13.
                 <a href="enhanced-samples.html?sample=13">Drawing Tools</a>. Contains demo of drawing tools
             </li>
+            <li>
+                14.
+                <a href="enhanced-samples.html?sample=14">Custom Geosearch</a>. Demo of custom geosearch types
+            </li>
         </ul>
 
         <h2>Fancy Samples</h2>
