--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -259,6 +259,11 @@
                 <a href="index-samples.html?sample=47">WKT Basemap</a>. A map that includes a basemap schema defined by
                 a WKT projection.
             </li>
+            <li>
+                48.
+                <a href="index-samples.html?sample=48">Vector Tile Basemap</a>. A map that includes a vector tile
+                basemap.
+            </li>
         </ul>
 
         <h2>Respect for Apps</h2>
