--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -63,6 +63,7 @@
                 <option value="export-custom-renderer">45. Custom Export</option>
                 <option value="no-layers">46. Normal Map with No Layers</option>
                 <option value="wkt-basemap">47. WKT Polar Basemap</option>
+                <option value="vector-tile">48. Vector Tile Basemap</option>
             </select>
             <nav class="linky-container">
                 <a class="linky" href="index-all.html">Catalogue</a
