Adding new demo

--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -30,6 +30,7 @@
                 <option value="012-layer-swipe">12. Layer Swipe</option>
                 <option value="013-drawing-tools">13. Drawing Tools</option>
                 <option value="014-geosearch-sources">14. Custom Geosearch Sources</option>
+                <option value="015-vector">15. Custom Vector Tile Layer</option>
             </select>
             <nav class="linky-container">
                 <a class="linky" href="enhanced-all.html">Catalogue</a
