--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -163,7 +163,7 @@
                                             {
                                                 id: 'CBMT',
                                                 layerType: 'esri-tile',
-                                                url: 'https://geoappext.nrcan.gc.ca/arcgis/rest/services/BaseMaps/CBMT3978/MapServer'
+                                                url: 'https://maps-cartes.services.geo.ca/server2_serveur2/rest/services/BaseMaps/CBMT3978/MapServer'
                                             }
                                         ],
                                         tileSchemaId: 'EXT_NRCAN_Lambert_3978#LOD_NRCAN_Lambert_3978'
@@ -178,7 +178,7 @@
                                             {
                                                 id: 'SMR',
                                                 layerType: 'esri-tile',
-                                                url: 'https://geoappext.nrcan.gc.ca/arcgis/rest/services/BaseMaps/Simple/MapServer'
+                                                url: 'https://maps-cartes.services.geo.ca/server2_serveur2/rest/services/BaseMaps/Simple/MapServer'
                                             }
                                         ],
                                         tileSchemaId: 'EXT_NRCAN_Lambert_3978#LOD_NRCAN_Lambert_3978'
@@ -193,7 +193,7 @@
                                             {
                                                 id: 'CBME_CBCE_HS_RO_3978',
                                                 layerType: 'esri-tile',
-                                                url: 'https://geoappext.nrcan.gc.ca/arcgis/rest/services/BaseMaps/CBME_CBCE_HS_RO_3978/MapServer'
+                                                url: 'https://maps-cartes.services.geo.ca/server2_serveur2/rest/services/BaseMaps/CBME_CBCE_HS_RO_3978/MapServer'
                                             }
                                         ],
                                         tileSchemaId: 'EXT_NRCAN_Lambert_3978#LOD_NRCAN_Lambert_3978'
@@ -208,7 +208,7 @@
                                             {
                                                 id: 'CBMT_CBCT_GEOM_3978',
                                                 layerType: 'esri-tile',
-                                                url: 'https://geoappext.nrcan.gc.ca/arcgis/rest/services/BaseMaps/CBMT_CBCT_GEOM_3978/MapServer'
+                                                url: 'https://maps-cartes.services.geo.ca/server2_serveur2/rest/services/BaseMaps/CBMT_CBCT_GEOM_3978/MapServer'
                                             }
                                         ],
                                         tileSchemaId: 'EXT_NRCAN_Lambert_3978#LOD_NRCAN_Lambert_3978'
@@ -449,7 +449,7 @@
                                             {
                                                 id: 'CBCT',
                                                 layerType: 'esri-tile',
-                                                url: 'https://geoappext.nrcan.gc.ca/arcgis/rest/services/BaseMaps/CBCT3978/MapServer'
+                                                url: 'https://maps-cartes.services.geo.ca/server2_serveur2/rest/services/BaseMaps/CBCT3978/MapServer'
                                             }
                                         ],
                                         tileSchemaId: 'EXT_NRCAN_Lambert_3978#LOD_NRCAN_Lambert_3978'
@@ -463,7 +463,7 @@
                                             {
                                                 id: 'SMR',
                                                 layerType: 'esri-tile',
-                                                url: 'https://geoappext.nrcan.gc.ca/arcgis/rest/services/BaseMaps/Simple/MapServer'
+                                                url: 'https://maps-cartes.services.geo.ca/server2_serveur2/rest/services/BaseMaps/Simple/MapServer'
                                             }
                                         ],
                                         tileSchemaId: 'EXT_NRCAN_Lambert_3978#LOD_NRCAN_Lambert_3978'
@@ -478,7 +478,7 @@
                                             {
                                                 id: 'CBME_CBCE_HS_RO_3978',
                                                 layerType: 'esri-tile',
-                                                url: 'https://geoappext.nrcan.gc.ca/arcgis/rest/services/BaseMaps/CBME_CBCE_HS_RO_3978/MapServer'
+                                                url: 'https://maps-cartes.services.geo.ca/server2_serveur2/rest/services/BaseMaps/CBME_CBCE_HS_RO_3978/MapServer'
                                             }
                                         ],
                                         tileSchemaId: 'EXT_NRCAN_Lambert_3978#LOD_NRCAN_Lambert_3978'
@@ -493,7 +493,7 @@
                                             {
                                                 id: 'CBMT_CBCT_GEOM_3978',
                                                 layerType: 'esri-tile',
-                                                url: 'https://geoappext.nrcan.gc.ca/arcgis/rest/services/BaseMaps/CBMT_CBCT_GEOM_3978/MapServer'
+                                                url: 'https://maps-cartes.services.geo.ca/server2_serveur2/rest/services/BaseMaps/CBMT_CBCT_GEOM_3978/MapServer'
                                             }
                                         ],
                                         tileSchemaId: 'EXT_NRCAN_Lambert_3978#LOD_NRCAN_Lambert_3978'
